[package]
name = "dumapril-taglocalization"
version = "0.1.0"
edition = "2021"
description = "CLI to detect AprilTags in input images"
authors = ["you <you@example.com>"]

[dependencies]
clap = { version = "4", features = ["derive"] }
apriltag = "0.4"
apriltag-image = "0.1"
anyhow = "1"
image = { version = "0.23", features = ["png", "jpeg"] }
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
