[package]
name = "dumapril-taglocalization"
version = "0.1.0"
edition = "2021"
description = "CLI to detect AprilTags in input images"
authors = ["you <you@example.com>"]

[dependencies]
clap = { version = "4", features = ["derive"] }
apriltag = "0.4"
apriltag-image = "0.1"
anyhow = "1"
image = { version = "0.23", features = ["png", "jpeg"] }
tempfile = "3"
nalgebra = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
v4l = "0.14"
jpeg-decoder = "0.3"
actix-web = "4"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
async-stream = "0.3"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
