[package]
name = "vortex_deployer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.26"
rfd = "0.14"
walkdir = "2"
# Disable default features to avoid openssl dependency. 
# libssh2-sys should fall back to WinCNG on Windows.
ssh2 = { version = "0.9", default-features = false } 
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
